# js-dos

./: .editorconfig  .gitignore  .gitmodules  .npmignore  README.deployment.md  README.md  cspell.config.yaml  eslint.config.mjs  package.json  pyproject.toml  tailwind.config.cjs  tsconfig.json
.github/config/: js-dos.dict
.github/workflows/: build.yml
src/: i18n.ts  load.ts  main.tsx  store.tsx  ui.tsx  vite-env.d.ts
src/components/: checkbox.tsx  close-button.tsx  dos-option-checkbox.tsx  dos-option-select.tsx  dos-option-slider.tsx  error.tsx  loading.tsx  lock.tsx  select.tsx  slider.tsx
src/frame/: account-frame.tsx  fat-drives-frame.tsx  frame.tsx  image-rendering-frame.tsx  network-frame.tsx  quick-save-frame.tsx  settings-frame.tsx  stats-frame.tsx
src/frame/editor/: defaults.ts  editor-conf-frame.tsx  editor-fs-frame.tsx
src/host/: bundle-storage.ts  lcache.ts  lstorage.ts
src/login/: login.tsx
src/public/: types.ts
src/sidebar/: account-button.tsx  cloud-save-button.tsx  diskette-icon.tsx  fullscreen-button.tsx  network-button.tsx  sidebar-button.tsx  sidebar.tsx
src/store/: auth.ts  dos.ts  editor.ts  init.ts  storage.ts  ui.ts
src/v8/: changes.ts  config.ts  subscriptions.ts
src/window/: error-window.tsx  loading-window.tsx  prerun-window.tsx  select-window.tsx  window.tsx
src/window/dos/: dos-dhry2.tsx  dos-runtime.tsx  dos-window.tsx
src/window/dos/controls/: keyboard.ts  keys.ts  mouse.ts
src/window/dos/render/: canvas.ts  resize.ts  webgl.ts
src/ws/: ws-sockdrive.ts  ws-transport-layer.ts
(+6 files in other folders)
